--- a/src/app/pegawai/GuiApp.form
+++ b/src/app/pegawai/GuiApp.form
@@ -6,6 +6,8 @@
     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
       <Color id="Default Cursor"/>
     </Property>
+    <Property name="name" type="java.lang.String" value="FramePeg" noResource="true"/>
+    <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
